syntax = "proto3";
package v6.services.pub;
option go_package = "github.com/city404/v6-public-rpc-proto/go/v6/user";

service PubUser {
    rpc Get (User) returns (User) {}
    rpc Login (LoginRequest) returns (LoginResponse) {} // login with password
    rpc Refresh (Token) returns (Token) {} // refresh token. 
    rpc Logoff (Token) returns (User) {}
    rpc ResetPassword (LoginRequest) returns (User) {} 
    rpc Register (RegisterRequest) returns (User) {}
    rpc Delete (User) returns (User) {}
    rpc SendSmsVerifyCode (SmsVeifyCodeSendRequest) returns (SmsVeifyCodeSendResponse) {}
    rpc SendSmsVerifyCodeNotUser (SmsVeifyCodeSendRequestNotUser) returns (SmsVeifyCodeSendResponse) {}
    rpc VerifyAuthToken (LoginRequest) returns (OauthTokenCheckResponse) {}
    rpc CreateAuthToken (LoginRequest) returns (OauthTokenResponse) {}
}

message User {
    string identity = 1; // identity for user, unique in system
    int32 type = 2; // 1: user, 2: admin, 3: super admin
    int32 status = 3; // 1: normal, 2: disabled, 3: deleted
    int64 update_ts = 5;
    string password = 6;
    string name = 7;
    string addon = 8;
    int64 create_ts = 9;
    string hash = 10;
    string icon = 11;
}

message LoginRequest {
    string identity = 1;
    string password = 2;
    string addon = 3;
    string input = 4;
    string type = 5;
    string callback = 6;
    string return_url = 7;
    int32 return_type = 8;
    string captcha = 9;
    string state = 10;
    string country_code = 11;
}

message LoginResponse {
    Token token = 1;
    User user = 2;
    LastLoginResponse last_login = 3;
    string state = 4;
}

message LastLoginResponse {
    string identity = 1;
    int64 last_login_ts = 2; // millisecond
    string last_login_ip = 3;
    string last_login_device = 4;
}

message Token {
    string identity = 1;
    string user_identity = 2; 
    string device = 3;
    int32 version = 4;
    string access_token = 5;
    string refresh_token = 6;
    int64 update_ts = 7;
    int64 access_token_expire_ts = 8;
    int64 refresh_token_expire_ts = 9;
}

message RegisterRequest {
    string name = 1;
    string password = 2;
    // string country_code = 3;
    // string phone = 4;
    string email = 5;
    string sms_captcha = 6;
    string captcha = 3;
}

message SmsVeifyCodeSendRequest {
    string captcha = 1;
    int32 type = 2;
    string addon = 3;
}


message SmsVeifyCodeSendRequestNotUser {
    string captcha = 1;
    int32 type = 2;
    string addon = 3;
    string country_code = 4;
    string phone = 5;
}

message SmsVeifyCodeSendResponse {
    string captcha = 1;
    int32 type = 2;
    string addon = 3;
    int64 expire_ts = 4;
}

message OauthTokenResponse {
    string url = 1;
    string addon = 2;
    string input = 3;
    string type = 4;
    string callback = 5;
    string return_url = 6;
    int32 return_type = 7;
    string captcha = 8;
    string state = 9;
}

message OauthTokenCheckResponse {
    LoginResponse login = 1;
    OauthTokenResponse oauth = 2;
    int32 status = 3;
    string message = 4;
}